infrastructure/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: starlogs
  labels:
    name: starlogs
    istio-injection: enabled
